--- a/index.html
+++ b/index.html
@@ -622,11 +622,18 @@ nav ul li a.clicked {
       <img src="https://i.postimg.cc/Dy8kmb5y/5b9e8c72-e658-4680-b9be-72d6996ad106.jpg" alt="Foto 2">
       <img src="https://i.postimg.cc/MpQCm2hC/939f1bce-1086-4d66-9cb9-8310f7e22c1d.jpg" alt="Foto 3">
       <img src="https://i.postimg.cc/5tmksxpR/66d4444d-d837-4027-a7db-db4005590739.jpg" alt="Foto 4">
-      <img src="https://i.postimg.cc/mZcZKqf1/Whats-App-Image-2025-09-17-at-14-42-57.jpg" alt="Foto 5">
-      <img src="https://i.postimg.cc/MKtCd5m2/Whats-App-Image-2025-09-17-at-14-42-58.jpg" alt="Foto 6">
-      <img src="https://i.postimg.cc/DwMtKzNx/Whats-App-Image-2025-09-17-at-14-43-08.jpg" alt="Foto 7">
-      <img src="https://i.postimg.cc/R0tb5LK0/Whats-App-Image-2025-09-17-at-14-43-05.jpg" alt="Foto 8">
-      <img src="https://i.postimg.cc/Wz556WL5/Whats-App-Image-2025-09-17-at-14-42-59.jpg" alt="Foto 9">
+      <img src="https://i.postimg.cc/T1ZH6FZY/6a8362d9-b0de-4fd8-b1de-ae46d9d8267f.jpg" alt="Foto 5">
+      <img src="hhttps://i.postimg.cc/DyHXPnKM/ea7c993c-d2a5-4134-ad3c-e32eaebe681e.jpg" alt="Foto 6">
+      <img src="https://i.postimg.cc/1t8k1GfB/acb993be-4e9d-4f71-b151-e958f01eb13b.jpg" alt="Foto 7">
+      <img src="https://i.postimg.cc/WzRHRQRp/33ba4f4c-6785-4e34-83a1-4337ac0c22e1.jpg" alt="Foto 8">
+      <img src="https://i.postimg.cc/cCNXkwYr/58e1852b-db72-4e63-8be9-0605f7221e0a.jpg" alt="Foto 9">
+      <img src="https://i.postimg.cc/SK3Z8wxL/4c507a1f-8fcf-4cc6-a26b-c409ad2eea02.jpg" alt="Foto 10">
+      <img src="https://i.postimg.cc/nrZGGZbm/3fccfda3-a49e-4dd0-99a6-f62e0cbaae0e.jpg" alt="Foto 11">
+      <img src="https://i.postimg.cc/RhXK1HTr/2aa5b453-b47a-4716-9885-cd54af5787c1.jpg" alt="Foto 12">
+      <img src="https://i.postimg.cc/G3QFnWnM/04099918-3158-4493-8836-6a0976d5644a.jpg" alt="Foto 13">
+      <img src="https://i.postimg.cc/5NK8680L/9434db59-53c4-4cbd-87f6-62232534e91f.jpg" alt="Foto 14">
+      <img src="https://i.postimg.cc/g2fRKd30/95459db5-13f7-4762-a590-598ff4cb448f.jpg" alt="Foto 15">
+      <img src="https://i.postimg.cc/6q71Ftbm/425b6ec5-653f-4567-b442-96f9f51bfe87.jpg" alt="Foto 16">
     </div>
   </section>
 
@@ -927,3 +934,4 @@ menuLinks.forEach(link => {
 </script>
 </body>
 </html>
+
