--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@ nav ul li a.clicked {
       <img src="https://i.postimg.cc/MpQCm2hC/939f1bce-1086-4d66-9cb9-8310f7e22c1d.jpg" alt="Foto 3">
       <img src="https://i.postimg.cc/5tmksxpR/66d4444d-d837-4027-a7db-db4005590739.jpg" alt="Foto 4">
       <img src="https://i.postimg.cc/T1ZH6FZY/6a8362d9-b0de-4fd8-b1de-ae46d9d8267f.jpg" alt="Foto 5">
-      <img src="hhttps://i.postimg.cc/DyHXPnKM/ea7c993c-d2a5-4134-ad3c-e32eaebe681e.jpg" alt="Foto 6">
+      <img src="https://i.postimg.cc/DyHXPnKM/ea7c993c-d2a5-4134-ad3c-e32eaebe681e.jpg" alt="Foto 6">
       <img src="https://i.postimg.cc/1t8k1GfB/acb993be-4e9d-4f71-b151-e958f01eb13b.jpg" alt="Foto 7">
       <img src="https://i.postimg.cc/WzRHRQRp/33ba4f4c-6785-4e34-83a1-4337ac0c22e1.jpg" alt="Foto 8">
       <img src="https://i.postimg.cc/cCNXkwYr/58e1852b-db72-4e63-8be9-0605f7221e0a.jpg" alt="Foto 9">
@@ -934,4 +934,5 @@ menuLinks.forEach(link => {
 </script>
 </body>
 </html>
+
 
